# obsidian-telegram-bot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.py
app/: commands.py  config.py  main.py  notes.py
app/handlers/: __init__.py  animation.py  attachments.py  caption.py  location.py  photo.py  sticker.py  text.py  utils.py  video.py  video_note.py  voice.py
docs/: design.md
